# bots

./: README.md  pyproject.toml
small_bots/: config.py  dice_bot.py  echo_bot.py  extract_entities.py  photo_bot.py
